01 fixed bugs