@@ -1,4 +1,4 @@
-package ca.yorku.checkmate.Model.mainGame;
+package mainGame;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -12,7 +12,7 @@ public class Bishop extends ChessPiece {
     @Override
     public boolean move(Move move) {
         //diag: +1+1, -1-1, +1-1, -1+1
-        Move lastMove = movesHistory.getLast();
+        Move lastMove = this.movesHistory.get(this.movesHistory.size() - 1);
         int rowDifference = Math.abs(lastMove.getRow() - move.getRow());
         int columnDifference = Math.abs(lastMove.getColumn() - move.getColumn());
         return rowDifference == columnDifference;
@@ -21,7 +21,7 @@ public class Bishop extends ChessPiece {
     @Override
     public List<Move> getPathWay(Move move) {
         List<Move> path = new ArrayList<Move>();
-        Move lastMove = movesHistory.getLast();
+        Move lastMove = this.movesHistory.get(this.movesHistory.size() - 1);
         int currentRow = lastMove.getRow();
         int currentColumn = lastMove.getColumn();
         if(lastMove.getRow() < move.getRow() && lastMove.getColumn() < move.getColumn()) { //+1+1
@@ -59,7 +59,7 @@ public class Bishop extends ChessPiece {
     @Override
     public List<Move> canThisMove() {
         List<Move> list = new ArrayList<>();
-        Move lastMove = movesHistory.getLast();
+        Move lastMove = this.movesHistory.get(this.movesHistory.size() - 1);
         list.add(new Move(lastMove.getRow() - 1, lastMove.getColumn()-1));
         list.add(new Move(lastMove.getRow() - 1, lastMove.getColumn()+1));
         list.add(new Move(lastMove.getRow() + 1, lastMove.getColumn()-1));
